--- a/QuoteApp/Views/_ViewImports.cshtml
+++ b/QuoteApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using QuoteApp
 @using QuoteApp.Models
+@using QuoteApp.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, QuoteApp
